http-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
        - name: http-svc
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: http-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: http-svc
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: http-svc-https
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: Host(`minio.fc277073030.com`) && PathPrefix(`/`)
#      kind: Rule
#      services:
#        - name: http-svc
#          port: 80
#      passHostHeader: true
#      middlewares:
#        - name: test-header
#  tls:
#    secretName: minio-tls
#    namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-svc-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.fc277073030.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: http-svc
          port: 80
      middlewares:
        - name: test-header
    - match: Host(`minio.fc277073030.com`) && PathPrefix(`/`) && Headers(`Cookie`,`region=2`)
      kind: Rule
      services:
        - name: spring-demo
          port: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-header
spec:
  headers:
#    customRequestHeaders:
#      Set-Cookie: region=2
    customResponseHeaders:
      Set-Cookie: region=2
