spring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-deploy
  labels:
    app: spring-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-demo
  template:
    metadata:
      labels:
        app: spring-demo
    spec:
      containers:
        - name: spring-demo
          image: registry.cn-hangzhou.aliyuncs.com/tekton-pipelines/spring-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-demo
  labels:
    app: spring-demo
spec:
  ports:
    - port: 8080
  selector:
    app: spring-demo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: spring-demo-headers
spec:
  entrypoints:
    - web
  routes:
    - match: Host(`spring.fc277073030.com`) && PathPrefix(`/`) && HeadersRegexp(`Cookie`,`region=1`)
      kind: Rule
      services:
        - name: spring-demo
          port: 8080
#    - match: Headers(`X-ROUTE`,`nginx`)
#      kind: Rule
#      services:
#        - name: nginx
#          port: 80
